Teamオーナーの権限移動機能の実装

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -44,6 +44,17 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <td>
+                        <% if (current_user.id == assign.team.owner.id) && (current_user.id != assign.user.id) %>
+                          <%= form_with model: @team, local: true, url: changeowner_team_path do |form| %>
+                            <%= form.hidden_field :name %>
+                            <%= form.hidden_field :icon %>
+                            <%= form.hidden_field :icon_cache %>
+                            <%= form.hidden_field :owner_id, value: assign.user.id %>
+                            <%= form.submit I18n.t('views.button.transfer_authority'), class: 'btn btn-sm btn-info' %>
+                          <% end %>
+                        <% end %>  
+                      </td>
                     </tr>
                   <% end %>
                 </tbody>
