--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,6 +34,11 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
+                <% if (current_user.id == agenda.user_id) || (current_user.id == agenda.team.owner.id) %>
+                  <span>
+                    <object><%= link_to I18n.t('views.messages.delete'), agenda_path(agenda), method: :delete, class: "btn btn-danger" %></object>
+                  </span>
+                <% end %>  
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
